--- a/RememberMe/app/src/main/res/values/strings.xml
+++ b/RememberMe/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="vocabulary_box">Vocabulary box</string>
     <string name="current_box">Current box</string>
     <string name="default_name">Default</string>
+    <string name="rename_box">Rename box</string>
+    <string name="foreign_language">Foreign language</string>
 </resources>
