--- a/RememberMe/app/src/main/res/values/strings.xml
+++ b/RememberMe/app/src/main/res/values/strings.xml
@@ -46,5 +46,10 @@
     <string name="cancel">Cancel</string>
     <string name="translate">Translate</string>
     <string name="save">Save</string>
+    <string name="word_translated">Word translated</string>
+    <string name="no_foreign_word">No foreign word</string>
+    <string name="no_native_word">No native word</string>
+    <string name="word_already_exists_in_box">Word already exists in box </string>
+    <string name="word_saved">Word saved</string>
 
 </resources>
