--- a/RememberMe/app/src/main/res/values/strings.xml
+++ b/RememberMe/app/src/main/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="compartment_i">Compartment %s</string>
     <string name="i_words_left">%s words left</string>
     <string name="one_word_left">1 word left</string>
+    <string name="memorize">Memorize</string>
 
 </resources>
