--- a/RememberMe/app/src/main/res/values/strings.xml
+++ b/RememberMe/app/src/main/res/values/strings.xml
@@ -61,5 +61,9 @@
     <string name="delete_current_box">Delete current box</string>
     <string name="delete_box_s_and_all_its_words">Delete box &lt;i&gt;%s&lt;/i&gt; and all its words?</string>
     <string name="deleted_box_s">Deleted box &lt;i&gt;%s&lt;/i&gt;</string>
+    <string name="edit_word">Edit word</string>
+    <string name="delete_word">Delete word</string>
+    <string name="delete_word_s">Delete word &lt;i&gt;%s&lt;/i&gt;?</string>
+    <string name="word_deleted">Word deleted</string>
 
 </resources>
