--- a/RememberMe/app/src/main/res/values/strings.xml
+++ b/RememberMe/app/src/main/res/values/strings.xml
@@ -74,5 +74,6 @@
     <string name="no_words_to_repeat">No words to repeat</string>
     <string name="one_word_to_repeat">1 word to repeat</string>
     <string name="i_words_to_repeat">%s words to repeat</string>
+    <string name="learned">Learned</string>
 
 </resources>
