fix exception handling (if no internet connection)

--- a/RememberMe/app/src/main/res/values/strings.xml
+++ b/RememberMe/app/src/main/res/values/strings.xml
@@ -77,5 +77,6 @@
     <string name="learned">Learned</string>
     <string name="n_words_to_repeat">%s words to repeat</string>
     <string name="n_from_box_s">%1$s from box %2$s</string>
+    <string name="no_internet_connection">No internet connection</string>
 
 </resources>
